# tabcmd

./: .coverage  .coveragerc  .doit.db.db  .gitignore  .travis.yml  Gemfile  LICENSE  README.md  SECURITY.md  World Indicators.tdsx  WorldIndicators.tdsx  _config.yml  contributing.md  dodo.py  index.html  mac_bundle_step.sh  mypy.ini  pyproject.toml  setup.cfg  setup.py  tabcmd-linux.spec  tabcmd-mac.spec  tabcmd-windows.spec  tabcmd.py  tabcmd.spec
.github/: dependabot.yml
.github/workflows/: check-coverage.yml  check-strings.yml  codeql-analysis.yml  coverage.yml  generate-metadata.yml  package.yml  publish-pypi.yml  python-app.yml  release-on-merge.yml  run-e2-tests.yml  run-tests.yml
Tests/: test_command_create_project.py  test_command_delete_group.py  test_command_delete_project.py  test_parser_create_group.py  test_parser_create_project.py  test_parser_delete_group.py  test_parser_delete_project.py  test_parser_invoker.py  test_parser_login.py  test_session.py
_includes/: docs_menu.html  footer.html  global-options.md  head.html  header.html
_layouts/: docs.html  news.html
_posts/: 10-07-2022  10-07-2022.md  2022-01-31-new-release.md  2022-10-07-release.md
assets/css/: main.css  style.css
docs/: index.md  tabcmd2_cmd.md  tabcmd2_install_flags.md  tabcmd_about.md  tabcmd_cmd.md  tabcmd_install_flags.md  tabcmd_whats_new.md
pythontabcmd/: __init__.py  tabcmd.py  tabcmd_controller.py
pythontabcmd/commands/: commands.py
pythontabcmd/parsers/: add_users_parser.py  create_extracts_parser.py  create_site_parser.py  encrypt_extracts_parser.py  export_parser.py  get_url_parser.py  login_parser.py  parent_parser.py  refresh_extracts_parser.py
pythontabcmd2/: __init__.py  constants.py  constants_errors.py  context.py  exceptions.py  logger_config.py  map_of_commands.py  map_of_parsers.py  parser_invoker.py  session.py  tabcmd2.py  tabcmd2_controller.py
pythontabcmd2/commands/: __init__.py  commands.py  create_group_command.py  create_project.py  create_project_command.py  create_user_command.py  delete_group_command.py  delete_project_command.py  delete_users_command.py  evaluate_csv.py  remove_users_command.py
pythontabcmd2/parsers/: __init__.py  add_users_parser.py  common_parser.py  create_extracts_parser.py  create_group_parser.py  create_project_parser.py  create_site_parser.py  create_site_users_parser.py  create_user_parser.py  create_users_parser.py  decrypt_extracts_parser.py  delete_data_source_parser.py  delete_extracts_parser.py  delete_group_parser.py  delete_parser.py  delete_project_parser.py  delete_site_parser.py  delete_site_users_parser.py  delete_users_parser.py  edit_site_parser.py  encrypt_extracts_parser.py  export_parser.py  get_url_parser.py  global_options.py  help_parser.py  list_sites_parser.py  login_parser.py  logout_parser.py  parent_parser.py  publish_parser.py  publish_samples_parser.py  reencrypt_parser.py  refresh_extracts_parser.py  remove_users_parser.py  runschedule_parser.py
res/: README.md  metadata.yml  tabcmd.icns  versioning.py
src/: __main__.py  tabcmd.py
src/commands/: constants.py  server.py
src/execution/: _version.py  localize.py  logger_config.py  parent_parser.py  tabcmd_controller.py
tabcmd/: __init__.py  __main__.py  constants.py  map_of_commands.py  tabcmd.py  tabcmd.spec  tabcmd_controller.py  version.py
tabcmd/commands/: __init__.py  command_strategy_interface.py  commands.py  constants.py  server.py
tabcmd/execution/: __init__.py  _version.py  common_parser.py  context.py  global_options.py  instrumentation.py  localize.py  logger_config.py  map_of_commands.py  map_of_parsers.py  parent_parser.py  tabcmd_controller.py
tabcmd/parsers/: __init__.py  add_users_parser.py  create_extracts_parser.py  create_group_parser.py  create_project_parser.py  create_site_parser.py  create_site_users_parser.py  create_users_parser.py  decrypt_extracts_parser.py  delete_extracts_parser.py  delete_group_parser.py  delete_parser.py  delete_project_parser.py  delete_site_parser.py  delete_site_users_parser.py  edit_site_parser.py  encrypt_extracts_parser.py  export_parser.py  get_url_parser.py  global_options.py  help_parser.py  list_sites_parser.py  login_parser.py  logout_parser.py  parent_parser.py  publish_parser.py  publish_samples_parser.py  reencrypt_parser.py  refresh_extracts_parser.py  remove_users_parser.py  runschedule_parser.py
tableauserverclient/: _version.py
tests/: common_setup.py  test_login_parser.py  test_logout_parser.py  test_main.py  test_parser_add_user.py  test_parser_common.py  test_parser_create_extracts.py  test_parser_create_group.py  test_parser_create_project.py  test_parser_create_site.py  test_parser_create_site_users.py  test_parser_create_user.py  test_parser_decrypt_extracts.py  test_parser_delete.py  test_parser_delete_extracts.py  test_parser_delete_group.py  test_parser_delete_project.py  test_parser_delete_site.py  test_parser_delete_site_user.py  test_parser_delete_user.py  test_parser_edit_site.py  test_parser_encrypt_extracts.py  test_parser_export.py  test_parser_get_url.py  test_parser_invoker.py  test_parser_list_sites.py  test_parser_login.py  test_parser_publish.py  test_parser_publish_samples.py  test_parser_reencrypt_extracts.py  test_parser_refresh_extracts.py  test_parser_remove_user.py  test_parser_runschedule.py  test_remove_user.py  test_tabcmd2_controller.py  test_tabcmd_controller.py  test_user_utils.py
tests/assets/: CustomViews.twbx  EmbeddedCredentials.twb  Regional.twbx  SampleDS.tds  SimpleSuperstore.twbx  WorkbookWithExtract.twbx  WorkbookWithoutExtract.twbx  coffeechainOM.twbx  detailed_users.csv  embedded_connection_waremart.twb  extract-data-access.twbx  live_mysql.tds  mock_data.py  online_users.csv  simple-data.twbx  usernames.csv
tests/commands/: test_constants.py  test_credential_file.txt  test_datasources_and_workbooks_command.py  test_execution.py  test_geturl_utils.py  test_listing_commands.py  test_localize.py  test_logger_config.py  test_project_utils.py  test_projects_utils.py  (+8 more)
(+286 files in other folders)
