[build-system]
requires = ["build", "setuptools>=62", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]
local_scheme = "no-local-version"  # require pypi supported versions always
[tool.setuptools]
packages = ["tabcmd"]
[tool.setuptools.package-data]
tabcmd = ["tabcmd.locales/**/*.mo"]
[tool.black]
line-length = 120
required-version = 22
target-version = ['py38', 'py39', 'py310', 'py311']
extend-exclude = '^/bin/*'
[tool.mypy]
disable_error_code = [
    'misc',
    'import'
]
files = ["tabcmd", "tests"]
show_error_codes = true
ignore_missing_imports = true
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--junitxml=./test.junit.xml"

[project]
name="tabcmd"
dynamic = ["version"]
description="A command line client for working with Tableau Server."
authors = [{name="Tableau", email="github@tableau.com"}]
license = {file = "LICENSE"}
readme = "res/README.md"
requires-python = ">=3.7"  # https://devguide.python.org/versions/
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]
dependencies = [
    "appdirs",
    "doit",
    "ftfy",
    "pyinstaller_versionfile",
    "pytest-order",
    "requests>=2.25,<3.0",
    "setuptools_scm",
    "types-appdirs",
    "types-mock",
    "types-requests",
    "types-setuptools",
    "tableauserverclient==0.31",
    "urllib3",
]
[project.optional-dependencies]
test = [
    "black>=22,<23",
    "mock",
    "mypy",
    "pytest>=7.0",
    "pytest-cov",
    "pytest-order",
    "pytest-runner",
    "requests-mock>=1.0,<2.0"]
localize = ["doit", "ftfy"]
package = ["pyinstaller==5.13", "doit"]
[project.urls]
repository = "https://github.com/tableau/tabcmd"
[project.scripts]
tabcmd = "tabcmd.tabcmd:main"
