[build-system]
requires = ["build", "setuptools>=62", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]
local_scheme = "no-local-version"  # require pypi supported versions always
[tool.setuptools]
packages = ["tabcmd"]
[tool.setuptools.package-data]
tabcmd = ["tabcmd.locales/**/*.mo"]
[tool.black]
line-length = 120
required-version = 22
target-version = ['py39', 'py310', 'py311']
extend-exclude = '^/bin/*'
[tool.mypy]
disable_error_code = [
    'misc',
    'import'
]
files = ["tabcmd", "tests"]
show_error_codes = true
ignore_missing_imports = true
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--junitxml=./test.junit.xml"

[project]
name="tabcmd"
dynamic = ["version"]
description="A command line client for working with Tableau Server."
authors = [{name="Tableau", email="github@tableau.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "res/README.md"
requires-python = ">=3.9"  # https://devguide.python.org/versions/
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
    "appdirs",
    "requests>=2.25,<3.0",
    "setuptools>=62; python_version >= '3.12'",
    "tableauserverclient==0.40",
    "urllib3",
]
[project.optional-dependencies]
dev = [
    "black>=22,<23",
    "mypy",
    "types-appdirs",
    "types-requests",
    "types-setuptools"
]
test = [
    "mock",
    "pytest>=7.0",
    "pytest-cov",
    "pytest-order",
    "pytest-runner",
    "requests-mock>=1.0,<2.0",
    "types-mock",
]
localize = ["doit", "ftfy"]
package = ["doit", "pyinstaller==5.13", "pyinstaller_versionfile"]
[project.urls]
repository = "https://github.com/tableau/tabcmd"
[project.scripts]
tabcmd = "tabcmd.tabcmd:main"
